cc: Remove PaintOpReader DumpWithoutCrashing

This has turned up some bugs, but is being incredibly noisy on the bots.
Remove the crash report until this is solved.

Bug: 910772
Change-Id: I9f2a7f7a1a758abe20a2304ad10da4a12fb4b9db
Reviewed-on: https://chromium-review.googlesource.com/c/1357619
Reviewed-by: Khushal <khushalsagar@chromium.org>
Commit-Queue: enne <enne@chromium.org>
Cr-Commit-Position: refs/heads/master@{#612935}
Former-commit-id: a841a18c3fe2b741d0a6a8a0791949c58dc265f0